# contract-intelligence-ai

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/agents/: comparison_agent.py  extractor_agent.py  obligation_agent.py  orchestrator.py  pipeline.py  prompts.py  risk_agent.py  summary_agent.py  tools.py
backend/app/agents/tools/: common.py  extraction.py  risk.py
backend/app/api/: error_handlers.py  main.py
backend/app/api/routes/: analysis.py  compare.py  contracts.py  cuad.py  obligations.py
backend/app/core/: config.py  models.py
backend/app/services/: cuad_loader.py  database.py  document_parser.py  storage.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py  test_api.py  test_extraction.py  test_risk.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DataProvider.tsx  ErrorBoundary.tsx  Layout.tsx
frontend/src/pages/: Compare.tsx  ContractDetail.tsx  Dashboard.tsx  Obligations.tsx  Upload.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
